# cournol

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  config.h.w32  configure  configure.ac  cournol.1  cournol.desktop
lib/: Makefile.am  Makefile.in
lib/nxpgtkdatabox/: Makefile.am  Makefile.in  gtkdatabox_graph.c  gtkdatabox_grid.c  gtkdatabox_grid.h  gtkdatabox_lines.c  gtkdatabox_lines.h  gtkdatabox_marker.c  gtkdatabox_marker.h  gtkdatabox_marshal.list  gtkdatabox_xyc_graph.c  gtkdatabox_xyc_graph.h  nxpgtkdatabox.c  nxpgtkdatabox.h
lib/nxpruler/: Makefile.am  Makefile.in  nxphruler.c  nxphruler.h  nxpruler-marshalers.c  nxpruler-marshalers.h  nxpruler-marshalers.list  nxpruler.c  nxpruler.h  nxpruleradjustment.c  nxpruleradjustment.h  nxpvruler.c  nxpvruler.h
m4/: ChangeLog
patches/: gtkdatabox.diff
po/: ChangeLog  Makevars  POTFILES.in  cournol.pot  de.gmo  de.po
scripts/: cournol.iss
src/: Makefile.am  Makefile.in  create_table.c  create_table.h  get_values.c  get_values.h  init_points.c  init_points.h  init_values.c  init_values.h  input.c  input.h  main.c  main.h  message.c  message.h  options.c  options.h  output.c  output.h
