SUBDIRS = intl po src

ACLOCAL_AMFLAGS = -I m4

man_MANS = cournol.1

EXTRA_DIST = m4/ChangeLog  autogen.sh cournol.desktop cournol.1 cournol.ico cournol.png \
	     config.h.w32 scripts/Lindent scripts/cournol.iss

icon_DATA = cournol.png
icondir = $(datadir)/pixmaps

util_DATA = cournol.desktop
utildir = $(datadir)/applications

